--- a/index.html
+++ b/index.html
@@ -3,9 +3,124 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <meta http-equiv='refresh' content='0;url=http://209.15.98.146/hujat-info/'>
+    <title>Hujat-Info</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- html5-qrcode@2.3.8 -->
+    <script src="html5-qrcode.min.js"></script>
+    <!-- <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script> -->
 </head>
-<body> 
+<body style="background-color: #a0e8b7;"> 
+    <div class="container">
+    <br>
+    <!-- //////////////Nav Bar//////////////////// -->
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color:#06693A;">
+        <div class="container-fluid">
+            <a href="#" class="navbar-brand">
+            <i class="fa fa-h-square" style="font-size:24px;"></i>  
+            <b>Hujat-Info</b><sup>&copy;</sup></a>
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                <span class="navbar-toggler-icon">
+                </span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <div class="navbar-nav">
+                </div>
+                <div class="navbar-nav ms-auto">             
+                    <a href="#" class="nav-item nav-link">?</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <br><br>
+    <!-- //////////End Nav Bar///////////////////// -->
+    <br>   
+
+<!--//// screen display section //////-->
+<table align="center" style='width: 18rem;' border=0 bgcolor=white><tr>
+<td>&nbsp;&nbsp;</td>
+<td align="center">
+    <p>
+    <div style="line-height: 80%;">
+        <font size=5 color=darkred><b>QR</b></font><font size=5 color=red><b>scanner<sup>&copy;</sup></b></font>
+        <br>
+        <font size="2">สแกนบัตรประจำตัวฮุดยาตของกรมการปกครอง</font>
+    </div>
+    </p>
+    
+    <div class="row">
+        <div class="col">
+          <div style="width:350px;" id="reader"></div>
+        </div>
+    </div>
+
+    <div class="row">
+      <div class="col" style="padding:5px;">
+        <!-- <h4>SCAN RESULT</h4> -->
+        <div id="result1"></div> <!-- Result Here -->
+        <input type="text" name="pid" id="result2" value="" style='width: 22rem;outline:none;' placeholder="กรอกเลขบัตรประชาชน 13 หลัก"/>
+      </div>
+    </div>
+
+<td>&nbsp;&nbsp;</td>
+</tr></table> 
+<!--//// screen display section //////-->
+
+    <!--//////////////////////////// javascript section -->
+    <script type="text/javascript">
+        MyRedirect();
+        function MyRedirect(){
+            let myurl="http://209.15.98.146/hujat-info/index.php?p=";
+            let inputElem = document.querySelector('input');
+            inputElem.addEventListener('input', () => {
+              if(inputElem.value.length >=13){
+                //window.location.replace("http://209.15.98.146/hujat-info/index.php?p=3960400280121");//redirect
+                window.location.replace(myurl + inputElem.value);//redirect
+              }
+            });
+        }
+
+        function onScanSuccess(qrCodeMessage) {
+            document.getElementById('result1').innerHTML = '<span class="result">'+qrCodeMessage+'</span>';
+            strArray = qrCodeMessage.split("=");
+            //document.getElementById('result').value = qrCodeMessage;
+            document.getElementById('result2').value = strArray[1];
+            window.location.replace("http://209.15.98.146/hujat-info/index.php?p=" + strArray[1]);//redirect
+           
+        }
+
+        function onScanError(errorMessage) {
+          //handle scan error
+        }
+
+        let config = {
+          fps: 10,
+          qrbox: {width: 250, height: 250},
+          rememberLastUsedCamera: true,
+          // Only support camera scan type.
+          supportedScanTypes: [Html5QrcodeScanType.SCAN_TYPE_CAMERA]
+        };
+        let html5QrcodeScanner = new Html5QrcodeScanner(
+            "reader", config, /* verbose= */ false);
+        html5QrcodeScanner.render(onScanSuccess);
+    </script> 
+    <!--//////////////////////////// javascript section -->
+
+<!-- ///Footer///////////// -->
+<br>
+<hr>
+<footer>
+    <div class="row"><center>
+        <font size=2 color=darkgreen>
+        <i class="fa fa-h-square" style="font-size:16px;"></i>     
+        <b>Hujat-Info</b><sup>&copy;</sup></font>
+        <font size=2>Pilgrim(Hujat) Information Junction <!-- , All Rights Reserved. -->
+        </font></center>
+    </div>
+</footer>
+<!-- ///Footer///////////// -->
+
+</div>    <!-- container -->
 </body>
 </html>
