--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 
 <td>&nbsp;&nbsp;</td>
 </tr></table> 
+        
+<center><font size=1>version : kidmat-012024</font></center>
+        
 <!--//// screen display section //////-->
 
     <!--//////////////////////////// javascript section -->
