--- a/index.html
+++ b/index.html
@@ -114,13 +114,11 @@
 <!-- ///Footer///////////// -->
 <hr>
 <footer>
-    <div class="row"><center>
-        <font size=2 color=darkgreen>
+    <center><font size=2 color=darkgreen>
         <i class="fa fa-h-square" style="font-size:16px;"></i>     
         <b>Hujat-Info</b><sup>&copy;</sup></font>
         <font size=2>Pilgrim(Hujat) Information Junction <!-- , All Rights Reserved. -->
-        </font></center>
-    </div>
+    </font></center>
 </footer>
 <!-- ///Footer///////////// -->
 
