--- a/index.html
+++ b/index.html
@@ -74,23 +74,28 @@
     <!--//////////////////////////// javascript section -->
     <script type="text/javascript">
         MyRedirect();
+
+        //for key-in function
         function MyRedirect(){
             let myurl="http://209.15.98.146/apps/hujat-info/index.php?p=";
             let inputElem = document.querySelector('input');
             inputElem.addEventListener('input', () => {
               if(inputElem.value.length >=13){
                 //window.location.replace("http://209.15.98.146/apps/hujat-info/index.php?p=3960400280121");//redirect
-                window.location.replace(myurl + inputElem.value);//redirect
+                //window.location.replace(myurl + inputElem.value);//redirect
+                window.location.replace(myurl + inputElem.value + "&inp=key");//redirect
               }
             });
         }
 
+        //for scan function
         function onScanSuccess(qrCodeMessage) {
             document.getElementById('result1').innerHTML = '<span class="result">'+qrCodeMessage+'</span>';
             strArray = qrCodeMessage.split("=");
             //document.getElementById('result').value = qrCodeMessage;
             document.getElementById('result2').value = strArray[1];
-            window.location.replace("http://209.15.98.146/apps/hujat-info/index.php?p=" + strArray[1]);//redirect
+            //window.location.replace("http://209.15.98.146/apps/hujat-info/index.php?p=" + strArray[1]);//redirect
+            window.location.replace("http://209.15.98.146/apps/hujat-info/index.php?p=" + strArray[1] + "&inp=scan");//redirect
            
         }
 
