--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="navbar-nav">
                 </div>
                 <div class="navbar-nav ms-auto">             
-                    <a href="#" class="nav-item nav-link">?</a>
+                    <a href="about.html" class="nav-item nav-link">?</a>
                 </div>
             </div>
         </div>
