--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 
         let config = {
           fps: 10,
-          qrbox: {width: 250, height: 250},
+          qrbox: {width: 350, height: 350},
           rememberLastUsedCamera: true,
-          // Only support camera scan type.
+          // Only support camera scan type.  // {width: 250, height: 250}
           supportedScanTypes: [Html5QrcodeScanType.SCAN_TYPE_CAMERA]
         };
         let html5QrcodeScanner = new Html5QrcodeScanner(
